<?xml version="1.0" encoding="utf-8"?>
<!--
  File:    nav_operator.xml
  Module:  Operator shell
  Owner:   Ravindu
  Purpose: The four tabs a Grid Operator sees. Today and Bays are built by
           Hamnad and Nimthara.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tab_scan"
        android:icon="@drawable/ic_scan_line"
        android:title="@string/operator_scan_tab" />

    <item
        android:id="@+id/tab_today"
        android:icon="@drawable/ic_list_checks"
        android:title="@string/operator_today_tab" />

    <item
        android:id="@+id/tab_bays"
        android:icon="@drawable/ic_battery_charging"
        android:title="@string/operator_bays_tab" />

    <item
        android:id="@+id/tab_account"
        android:icon="@drawable/ic_user_round"
        android:title="@string/operator_account_tab" />

</menu>
